--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,9 +5,7 @@
     "strict": true,
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "dist",
+    "outDir": "./build",
     "sourceMap": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
 }
